--- a/Web-Files/Version-1.0.0/css/styles.css
+++ b/Web-Files/Version-1.0.0/css/styles.css
@@ -25,14 +25,14 @@ body {
     line-height: 1.6;
     margin: 20px;
     padding: 0;
-    background-color: #ffffff;
+    background-color: #EEF5DB;
 }
 
 /* Title */
 h1 {
     font-family: 'Oxygen';
     font-weight: 700; /* Bold */
-    color: #333;
+    color: #0A090C;
     font-size: 2.5em;
     margin-bottom: 20px;
 }
