--- a/Web-Files/Version-1.0.0/css/styles.css
+++ b/Web-Files/Version-1.0.0/css/styles.css
@@ -62,3 +62,28 @@ p strong {
     color: #222;
     font-weight: bold;
 }
+
+table, tr, td {
+    font-family: 'Oxygen';
+    font-weight: 300;
+    border: 3px solid black;
+    border-collapse: collapse;
+    border-style: solid;
+  }
+
+th {
+    font-family: 'Oxygen';
+    font-weight: 700;
+    border: 3px solid black;
+}
+
+button {
+    font-family: 'Oxygen';
+    font-weight: 300;
+    border: 1px solid black;
+    border-collapse: collapse;
+    border-style: solid;
+    color: #0A090C;
+    background-color: #dfe7c8;
+    border-radius: 2px;
+}
